voidcsfml/include/voidcsfml/graphics.h

VOIDCSFML_API sfml_graphics_version(int*, int*, int*);
VOIDCSFML_API text_setorigin_UU2(void* self, void* origin);
VOIDCSFML_API text_getposition(void* self, void* result);
VOIDCSFML_API text_getrotation(void* self, float* result);
VOIDCSFML_API text_getscale(void* self, void* result);
VOIDCSFML_API text_getorigin(void* self, void* result);
VOIDCSFML_API text_move_Bw9Bw9(void* self, float offset_x, float offset_y);
VOIDCSFML_API text_move_UU2(void* self, void* offset);
VOIDCSFML_API text_rotate_Bw9(void* self, float angle);
VOIDCSFML_API text_scale_Bw9Bw9(void* self, float factor_x, float factor_y);
VOIDCSFML_API text_scale_UU2(void* self, void* factor);
VOIDCSFML_API text_gettransform(void* self, void* result);
VOIDCSFML_API text_getinversetransform(void* self, void* result);
VOIDCSFML_API text_draw_kb9RoT(void* self, void* target, void* states);
VOIDCSFML_API text_draw_fqURoT(void* self, void* target, void* states);
VOIDCSFML_API text_draw_Xk1RoT(void* self, void* target, void* states);
VOIDCSFML_API text_initialize_clM(void* self, void* copy);