src/graphics/lib.cr

  fun text_setorigin_UU2(self : Void*, origin : Void*)
  fun text_getposition(self : Void*, result : Void*)
  fun text_getrotation(self : Void*, result : LibC::Float*)
  fun text_getscale(self : Void*, result : Void*)
  fun text_getorigin(self : Void*, result : Void*)
  fun text_move_Bw9Bw9(self : Void*, offset_x : LibC::Float, offset_y : LibC::Float)
  fun text_move_UU2(self : Void*, offset : Void*)
  fun text_rotate_Bw9(self : Void*, angle : LibC::Float)
  fun text_scale_Bw9Bw9(self : Void*, factor_x : LibC::Float, factor_y : LibC::Float)
  fun text_scale_UU2(self : Void*, factor : Void*)
  fun text_gettransform(self : Void*, result : Void*)
  fun text_getinversetransform(self : Void*, result : Void*)
  fun text_draw_kb9RoT(self : Void*, target : Void*, states : Void*)
  fun text_draw_fqURoT(self : Void*, target : Void*, states : Void*)
  fun text_draw_Xk1RoT(self : Void*, target : Void*, states : Void*)
  fun text_initialize_clM(self : Void*, copy : Void*)
  fun sfml_graphics_version(LibC::Int*, LibC::Int*, LibC::Int*)
end
